🚀 Atualiza projeto com funcionalidades profissionais do GitHub
✨ Adiciona:
- GitHub Actions para CI/CD automático
- Templates de issues para bugs e funcionalidades
- Guia de contribuição para colaboradores
- Changelog com versionamento semântico
- Configurações de infraestrutura

🔧 Melhora:
- .gitignore para arquivos do GitHub
- Estrutura de documentação profissional
- Workflow de desenvolvimento colaborativo

📚 Documentação:
- CONTRIBUTING.md com padrões de código
- CHANGELOG.md com histórico de versões
- Templates padronizados para issues

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,17 @@ output/reports/*_temp.pdf
 !output/reports/*.md
 !output/reports/*.html
 !output/reports/*.pdf
+
+# =============================================================================
+# ARQUIVOS DO GITHUB
+# =============================================================================
+
+# Manter arquivos de configuração do GitHub
+!.github/
+!.github/workflows/
+!.github/ISSUE_TEMPLATE/
+
+# Manter arquivos de documentação
+!CONTRIBUTING.md
+!CHANGELOG.md
+!LICENSE
