--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,145 @@
-# =============================================================================
-# .gitignore para Projeto R - Pokémon Elite dos 4
-# =============================================================================
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
 
-# =============================================================================
-# ARQUIVOS R ESPECÍFICOS
-# =============================================================================
+# C extensions
+*.so
 
-# Arquivos de sessão R
-.RData
-.Rhistory
-.Rapp.history
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Arquivos de ambiente R
-.Rprofile
-.Renviron
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
-# Arquivos de workspace
-*.Rproj
-*.Rproj.user/
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
-# Arquivos de cache R
-.Rcache/
-.Rcheck/
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
 
-# =============================================================================
-# ARQUIVOS DE DADOS TEMPORÁRIOS
-# =============================================================================
+# Translations
+*.mo
+*.pot
 
-# Dados processados temporários
-data/*_temp.csv
-data/*_temp.rds
-data/*_processed_temp.*
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
 
-# Cache de dados
-data/cache/
-data/temp/
+# Flask stuff:
+instance/
+.webassets-cache
 
-# =============================================================================
-# ARQUIVOS DE SAÍDA TEMPORÁRIOS
-# =============================================================================
+# Scrapy stuff:
+.scrapy
 
-# Gráficos temporários
-output/plots/*_temp.png
-output/plots/*_temp.pdf
+# Sphinx documentation
+docs/_build/
 
-# Tabelas temporárias
-output/tables/*_temp.csv
-output/tables/*_temp.txt
+# PyBuilder
+target/
 
-# Modelos temporários
-output/models/*_temp.rds
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# =============================================================================
-# ARQUIVOS DE SISTEMA
-# =============================================================================
+# IPython
+profile_default/
+ipython_config.py
 
-# Arquivos do macOS
+# pyenv
+.python-version
+
+# pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
+#Pipfile.lock
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# Output files
+output/
+*.log
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
 .DS_Store
 .DS_Store?
 ._*
@@ -64,97 +148,6 @@ output/models/*_temp.rds
 ehthumbs.db
 Thumbs.db
 
-# Arquivos do Windows
-*.lnk
+# Temporary files
 *.tmp
 *.temp
-
-# Arquivos do Linux
-*~
-.fuse_hidden*
-.directory
-.Trash-*
-
-# =============================================================================
-# ARQUIVOS DE LOG
-# =============================================================================
-
-# Logs de execução
-*.log
-logs/
-log/
-
-# =============================================================================
-# ARQUIVOS DE CONFIGURAÇÃO LOCAL
-# =============================================================================
-
-# Configurações locais
-config/local_config.R
-config/secrets.R
-.env
-
-# =============================================================================
-# ARQUIVOS DE BACKUP
-# =============================================================================
-
-# Arquivos de backup
-*.bak
-*.backup
-*.old
-*~
-
-# =============================================================================
-# DIRETÓRIOS TEMPORÁRIOS
-# =============================================================================
-
-# Diretórios temporários
-temp/
-tmp/
-cache/
-
-# =============================================================================
-# ARQUIVOS DE PACOTES
-# =============================================================================
-
-# Pacotes R instalados localmente
-packrat/
-renv/
-
-# =============================================================================
-# ARQUIVOS DE RELATÓRIOS TEMPORÁRIOS
-# =============================================================================
-
-# Relatórios temporários
-output/reports/*_temp.md
-output/reports/*_temp.html
-output/reports/*_temp.pdf
-
-# =============================================================================
-# EXCEÇÕES - MANTER ESTES ARQUIVOS
-# =============================================================================
-
-# NÃO ignorar estes arquivos importantes
-!data/*.csv
-!data/*.rds
-!output/plots/*.png
-!output/plots/*.pdf
-!output/tables/*.csv
-!output/tables/*.txt
-!output/models/*.rds
-!output/reports/*.md
-!output/reports/*.html
-!output/reports/*.pdf
-
-# =============================================================================
-# ARQUIVOS DO GITHUB
-# =============================================================================
-
-# Manter arquivos de configuração do GitHub
-!.github/
-!.github/workflows/
-!.github/ISSUE_TEMPLATE/
-
-# Manter arquivos de documentação
-!CONTRIBUTING.md
-!CHANGELOG.md
-!LICENSE
